syntax = "proto3";

package stream_auth_server.v1;
option go_package = "github.com/gitJaesik/stream_go_srvs/gen/proto/go/stream_auth_server/v1";

import "stream_common/v1/stream_common.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

message EchoRequest { string message = 1; }
message EchoResponse { string message = 1; }

message SignInRequest {
  string username_or_email = 1;
  string password = 2;
  stream_common.v1.ClientInfo client_info = 3;
}
message SignInResponse { string jwt_token = 1; }

message SignOutRequest {}
message SignOutResponse {
  bool success = 1;
  string result = 2;
}

message SignUpRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}
message SignUpResponse {
  bool success = 1;
  string result = 2;
  google.protobuf.Timestamp created_at = 3;
}

message CreatePlayerInfoRequest {
  int32 id = 1;
  string nick_name = 2;
  int32 player_level = 3;
  string tier = 4;
  float winning_rate = 5;
  int32 victory_count = 6;
  int32 defeat_count = 7;
  int32 max_wave = 8;
  int32 trophy_count = 9;
  int32 owning_jewel = 10;
  int32 owning_gold  = 11;
  int32 owning_box  = 12;
  int32 owning_map  = 13;
  repeated int32 owning_emoticon = 14;
  repeated string owning_dice = 15;
  int32 daily_gold_level  = 16;
  google.protobuf.Timestamp created_at = 17;
  google.protobuf.Timestamp updated_at = 18;
}
message CreatePlayerInfoResponse {
  string player_id = 1;
  // string username = 2;
}


message GetPlayerInfoRequest {
  int32 player_id = 1;
  // string player_id = 1;
  // string username = 2;
}
message GetPlayerInfoResponse {
  int32 player_id = 1;
  string nick_name = 2;
  int32 player_level = 3;
  string tier = 4;
  float winning_rate = 5;
  int32 victory_count = 6;
  int32 defeat_count = 7;
  int32 max_wave = 8;
  int32 trophy_count = 9;
  int32 owning_jewel = 10;
  int32 owning_gold  = 11;
  int32 owning_box  = 12;
  int32 owning_map  = 13;
  repeated int32 owning_emoticon = 14;
  repeated string owning_dice = 15;
  int32 daily_gold_level  = 16;
  google.protobuf.Timestamp created_at = 17;
  google.protobuf.Timestamp updated_at = 18;
}

message Emotion {
  string id = 1;
  string name = 2;
  int32 emotion_id = 3;
  string description = 4;
  int32 purchase_gold = 5;
  int32 purchase_jewel = 6;
}

// grpc-gateway reference annotation
// https://github.com/googleapis/googleapis/blob/master/google/api/http.proto

service StreamAuthService {
  rpc Echo(EchoRequest) returns (EchoResponse) {
    option (google.api.http) = {
      get: "/v1/example/echo/{message}"
    };
  }
  // rpc Echo(EchoRequest) returns (EchoResponse) {
  //   option (google.api.http) = {
  //     post: "/v1/example/echo"
  //     body: "*"
  //   };
  // }
  rpc SignIn(SignInRequest) returns (SignInResponse) {}
  rpc SignOut(SignOutRequest) returns (SignOutResponse) {}
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}

  rpc CreatePlayerInfo(CreatePlayerInfoRequest) returns (CreatePlayerInfoResponse) {
    option (google.api.http) = {
      post: "/v1/playerinfo/create"
      body: "*"
    };
  }
  rpc GetPlayerInfo(GetPlayerInfoRequest) returns (GetPlayerInfoResponse) {
    option (google.api.http) = {
      get: "/v1/playerinfo/{player_id}"
    };
  }
  rpc UpdatePlayer(GetPlayerInfoRequest) returns (GetPlayerInfoResponse) {
    option (google.api.http) = {
      post: "/v1/playerinfo/update/{player_id}"
      body: "*"
    };
  }
  rpc DeletePlayer(GetPlayerInfoRequest) returns (GetPlayerInfoResponse) {
    option (google.api.http) = {
      post: "/v1/playerinfo/delete/{player_id}"
      body: "*"
    };
  }

  // rpc GetPlayerList(GetPlayerInfoRequest) returns (GetPlayerInfoResponse) {
  //   option (google.api.http) = {
  //     get: "/v1/playerinfo/{player_id}"
  //   };
  // }

  // rpc GetDiceInfo(GetPlayerInfoRequest) returns (GetPlayerInfoResponse) {
  //   option (google.api.http) = {
  //     get: "/v1/dice/{dice_id}"
  //   };
  // }

  // rpc GetDiceList(GetPlayerInfoRequest) returns (GetPlayerInfoResponse) {
  //   option (google.api.http) = {
  //     get: "/v1/dice/{dice_id}"
  //   };
  // }

}
